--- a/rootdir/etc/init.Spacewar.perf.rc
+++ b/rootdir/etc/init.Spacewar.perf.rc
@@ -142,3 +142,12 @@ on property:ro.board.platform=lahaina && property:vendor.post_boot.parsed=1
 # Migrate tasks again in case kernel threads are created during boot
 on property:sys.boot_completed=1
     copy_per_line /dev/cpuctl/tasks /dev/cpuctl/system/tasks
+
+service vendor.qti.hardware.display.allocator /vendor/bin/hw/vendor.qti.hardware.display.allocator-service
+    override
+    class hal animation
+    user system
+    group graphics drmrpc
+    capabilities SYS_NICE
+    onrestart restart surfaceflinger
+    task_profiles ProcessCapacityHigh HighPerformance
