--- a/rootdir/etc/init.Spacewar.perf.rc
+++ b/rootdir/etc/init.Spacewar.perf.rc
@@ -143,6 +143,17 @@ on property:ro.board.platform=lahaina && property:vendor.post_boot.parsed=1
 on property:sys.boot_completed=1
     copy_per_line /dev/cpuctl/tasks /dev/cpuctl/system/tasks
 
+
+service vendor.qti.hardware.display.composer /vendor/bin/hw/vendor.qti.hardware.display.composer-service
+    override
+    class hal animation
+    user system
+    group graphics drmrpc
+    capabilities SYS_NICE
+    onrestart restart surfaceflinger
+    socket pps stream 0660 system system
+    task_profiles ProcessCapacityHigh HighPerformance
+
 service vendor.qti.hardware.display.allocator /vendor/bin/hw/vendor.qti.hardware.display.allocator-service
     override
     class hal animation
