--- a/overlay-evolution/EvolutionSettingsResSpacewar/AndroidManifest.xml
+++ b/overlay-evolution/EvolutionSettingsResSpacewar/AndroidManifest.xml
@@ -5,7 +5,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.settings.overlay.evolution.common">
-
+    <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
         android:priority="300"
