Do not allow backups of overlays

--- a/overlay/SpacewarCarrierConfig/AndroidManifest.xml
+++ b/overlay/SpacewarCarrierConfig/AndroidManifest.xml
@@ -5,7 +5,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.carrierconfig.overlay.spacewar">
-
+    <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
         android:priority="200"
