--- a/overlay-evolution/EvolutionFrameworksResSpacewar/AndroidManifest.xml
+++ b/overlay-evolution/EvolutionFrameworksResSpacewar/AndroidManifest.xml
@@ -5,7 +5,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="evolution.overlay.common">
-
+    <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
         android:priority="250"
