--- a/overlay-evolution/EvolutionSettingsProviderResSpacewar/AndroidManifest.xml
+++ b/overlay-evolution/EvolutionSettingsProviderResSpacewar/AndroidManifest.xml
@@ -5,7 +5,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.providers.settings.evolution.overlay.common">
-
+    <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
         android:priority="350"
