--- a/overlay/SpacewarSettingsProvider/AndroidManifest.xml
+++ b/overlay/SpacewarSettingsProvider/AndroidManifest.xml
@@ -5,7 +5,7 @@
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.providers.settings.overlay.spacewar.target">
-
+    <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
         android:priority="300"
