--- a/rro_overlays/EvolutionXConfigOverlay/AndroidManifest.xml
+++ b/rro_overlays/EvolutionXConfigOverlay/AndroidManifest.xml
@@ -1,23 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
-/**
- * Copyright (c) 2019, The Android Open Source Project
- *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
+     Copyright (C) 2022 The Evolution X Project
+     SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.evolutionx.android.overlay.evolutionxconfig">
-    <overlay android:isStatic="true" android:priority="10" android:targetPackage="android"/>
-
-    <application android:hasCode="false" android:allowBackup="false"/>
+    <application android:allowBackup="false"/>
+    <overlay
+        android:isStatic="true"
+        android:priority="1001"
+        android:targetPackage="android" />
 </manifest>
