--- a/overlay-miku/MikuFrameworksResSpacewar/AndroidManifest.xml
+++ b/overlay-miku/MikuFrameworksResSpacewar/AndroidManifest.xml
@@ -4,7 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="evolution.overlay.common">
+    package="miku.overlay.common">
     <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
