--- a/overlay-miku/MikuSettingsResSpacewar/AndroidManifest.xml
+++ b/overlay-miku/MikuSettingsResSpacewar/AndroidManifest.xml
@@ -4,7 +4,7 @@
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.settings.overlay.evolution.common">
+    package="com.android.settings.overlay.miku.common">
     <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
