--- a/overlay-miku/MikuSystemUIResSpacewar/AndroidManifest.xml
+++ b/overlay-miku/MikuSystemUIResSpacewar/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2022 The Evolution X Project
+     Copyright (C) 2022 The LineageOS Project
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.providers.settings.evolution.overlay.common">
+    package="com.android.systemui.overlay.miku.common">
     <application android:allowBackup="false"/>
     <overlay
         android:isStatic="true"
-        android:priority="350"
-        android:targetPackage="com.android.providers.settings" />
+        android:priority="750"
+        android:targetPackage="com.android.systemui" />
 </manifest>
