--- a/overlay/MatrixxSystemUISpacewar/AndroidManifest.xml
+++ b/overlay/MatrixxSystemUISpacewar/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2022 The LineageOS Project
+     Copyright (C) 2023 PixysOS
      SPDX-License-Identifier: Apache-2.0
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.systemui.overlay.evolution.common">
-    <application android:allowBackup="false"/>
+    package="com.android.systemui.overlay.matrixx.spacewar">
+
     <overlay
         android:isStatic="true"
         android:priority="750"
